[package]
name = "miniextendr"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[[bin]]
name = "document"
path = "document.rs"
bench = false

[lib]
path = "lib.rs"
crate-type = ["rlib", "staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]
# Optional features (pass-through to miniextendr-api)
rayon = ["miniextendr-api/rayon"]
rand = ["miniextendr-api/rand"]
rand_distr = ["miniextendr-api/rand_distr"]
either = ["miniextendr-api/either"]
ndarray = ["miniextendr-api/ndarray"]
nalgebra = ["miniextendr-api/nalgebra"]
serde = ["miniextendr-api/serde"]
serde_json = ["miniextendr-api/serde_json"]
num-bigint = ["miniextendr-api/num-bigint"]
rust_decimal = ["miniextendr-api/rust_decimal"]
ordered-float = ["miniextendr-api/ordered-float"]
uuid = ["miniextendr-api/uuid"]
regex = ["miniextendr-api/regex"]
indexmap = ["miniextendr-api/indexmap"]
time = ["miniextendr-api/time"]
num-traits = ["miniextendr-api/num-traits"]
bytes = ["miniextendr-api/bytes"]
num-complex = ["miniextendr-api/num-complex"]
url = ["miniextendr-api/url"]
sha2 = ["miniextendr-api/sha2"]
bitflags = ["miniextendr-api/bitflags"]
bitvec = ["miniextendr-api/bitvec"]
aho-corasick = ["miniextendr-api/aho-corasick"]
toml = ["miniextendr-api/toml"]
tabled = ["miniextendr-api/tabled"]
raw_conversions = ["miniextendr-api/raw_conversions"]
vctrs = ["miniextendr-api/vctrs"]
tinyvec = ["miniextendr-api/tinyvec"]
borsh = ["miniextendr-api/borsh"]
indicatif = ["miniextendr-api/indicatif"]
# Diagnostic / development features (shallow pass-through)
macro-coverage = ["miniextendr-api/macro-coverage"]
debug-preserve = ["miniextendr-api/debug-preserve"]
growth-debug = ["miniextendr-api/growth-debug"]
release-thread-check = ["miniextendr-api/release-thread-check"]
# Project-wide defaults for #[miniextendr] options
default-strict = ["miniextendr-api/default-strict"]
default-coerce = ["miniextendr-api/default-coerce"]
default-r6 = ["miniextendr-api/default-r6"]
default-s7 = ["miniextendr-api/default-s7"]
worker-thread = ["miniextendr-api/worker-thread"]
default-worker = ["miniextendr-api/default-worker"]

[dependencies]
miniextendr-api = { git = "https://github.com/CGMossa/miniextendr" }

[build-dependencies]
miniextendr-lint = { git = "https://github.com/CGMossa/miniextendr" }

# Development: use local monorepo paths instead of git
# These patches are active when building from the monorepo
# Note: miniextendr-macros is a dependency of miniextendr-api, so we patch it too
[patch."https://github.com/CGMossa/miniextendr"]
miniextendr-api = { path = "../../../miniextendr-api" }
miniextendr-macros = { path = "../../../miniextendr-macros" }
miniextendr-macros-core = { path = "../../../miniextendr-macros-core" }
miniextendr-lint = { path = "../../../miniextendr-lint" }
