[package]
name = "miniextendr"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent)
[workspace]

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]
# Optional features (pass-through to miniextendr-api)
rayon = ["miniextendr-api/rayon"]
rand = ["miniextendr-api/rand"]
rand_distr = ["miniextendr-api/rand_distr"]
either = ["miniextendr-api/either"]
ndarray = ["miniextendr-api/ndarray"]
nalgebra = ["miniextendr-api/nalgebra"]
serde = ["miniextendr-api/serde"]
serde_json = ["miniextendr-api/serde_json"]
num-bigint = ["miniextendr-api/num-bigint"]
rust_decimal = ["miniextendr-api/rust_decimal"]
ordered-float = ["miniextendr-api/ordered-float"]
uuid = ["miniextendr-api/uuid"]
regex = ["miniextendr-api/regex"]
indexmap = ["miniextendr-api/indexmap"]
time = ["miniextendr-api/time"]
num-traits = ["miniextendr-api/num-traits"]
bytes = ["miniextendr-api/bytes"]
num-complex = ["miniextendr-api/num-complex"]
url = ["miniextendr-api/url"]
sha2 = ["miniextendr-api/sha2"]
bitflags = ["miniextendr-api/bitflags"]
bitvec = ["miniextendr-api/bitvec"]
aho-corasick = ["miniextendr-api/aho-corasick"]
toml = ["miniextendr-api/toml"]
tabled = ["miniextendr-api/tabled"]
raw_conversions = ["miniextendr-api/raw_conversions"]
vctrs = ["miniextendr-api/vctrs"]
tinyvec = ["miniextendr-api/tinyvec"]
borsh = ["miniextendr-api/borsh"]
arrow = ["miniextendr-api/arrow"]
datafusion = ["miniextendr-api/datafusion"]
log = ["miniextendr-api/log", "dep:log"]
indicatif = ["miniextendr-api/indicatif"]
# Diagnostic / development features (shallow pass-through)
macro-coverage = ["miniextendr-api/macro-coverage"]
debug-preserve = ["miniextendr-api/debug-preserve"]
growth-debug = ["miniextendr-api/growth-debug"]
# Project-wide defaults for #[miniextendr] options
default-strict = ["miniextendr-api/default-strict"]
default-coerce = ["miniextendr-api/default-coerce"]
default-r6 = ["miniextendr-api/default-r6"]
default-s7 = ["miniextendr-api/default-s7"]
worker-thread = ["miniextendr-api/worker-thread"]
default-worker = ["miniextendr-api/default-worker"]
## All additive features (excludes mutually exclusive default-r6/default-s7 and nonapi/connections).
full = [
    "serde", "serde_json", "num-complex", "uuid", "url", "aho-corasick",
    "bitflags", "bitvec", "arrow", "datafusion", "toml", "time", "ndarray",
    "nalgebra", "indexmap", "tinyvec", "bytes", "raw_conversions", "vctrs",
    "borsh", "ordered-float", "num-bigint", "rust_decimal", "regex",
    "num-traits", "tabled", "rayon", "sha2", "rand", "rand_distr",
    "either", "log", "worker-thread", "macro-coverage",
    "debug-preserve", "growth-debug",
]

[dependencies]
miniextendr-api = { version = "*", path = "../../vendor/miniextendr-api" }
log = { version = "0.4", optional = true }

[build-dependencies]
miniextendr-lint = { version = "*", path = "../../vendor/miniextendr-lint" }

# codegen-units = 1 ensures the entire user crate compiles into a single .o file
# inside the staticlib archive. This is required for linkme's distributed_slice:
# the linker only pulls archive members that resolve undefined symbols, so with
# multiple .o files, distributed_slice entries in unreferenced .o files get dropped.
# With a single .o, pulling in R_init_<pkg> brings everything along.
[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1

[patch]

[patch.crates-io]
miniextendr-macros = { path = "../../vendor/miniextendr-macros" }
miniextendr-macros-core = { path = "../../vendor/miniextendr-macros-core" }
miniextendr-api = { path = "../../vendor/miniextendr-api" }
miniextendr-lint = { path = "../../vendor/miniextendr-lint" }
