[package]
name = "miniextendr"
version = "0.1.0"
edition = "2024"
publish = false

# Make this a standalone workspace (prevents inheriting from parent).
# `satellite/` is a path dependency with its own sealed workspace — exclude it
# so cargo doesn't treat it as a nested member.
[workspace]
exclude = ["satellite"]

[lib]
path = "lib.rs"
crate-type = ["staticlib"]

[features]
default = []
nonapi = ["miniextendr-api/nonapi"]
connections = ["miniextendr-api/connections"]
# Optional features (pass-through to miniextendr-api)
rayon = ["miniextendr-api/rayon"]
rand = ["miniextendr-api/rand"]
rand_distr = ["miniextendr-api/rand_distr"]
either = ["miniextendr-api/either"]
ndarray = ["miniextendr-api/ndarray"]
nalgebra = ["miniextendr-api/nalgebra"]
serde = ["miniextendr-api/serde"]
serde_json = ["miniextendr-api/serde_json"]
# Satellite-architecture experiment: a serde-only crate bridged to R. See satellite_bridge.rs.
satellite = ["serde", "dep:satellite"]
num-bigint = ["miniextendr-api/num-bigint"]
rust_decimal = ["miniextendr-api/rust_decimal"]
ordered-float = ["miniextendr-api/ordered-float"]
uuid = ["miniextendr-api/uuid"]
regex = ["miniextendr-api/regex"]
indexmap = ["miniextendr-api/indexmap"]
time = ["miniextendr-api/time"]
jiff = ["miniextendr-api/jiff"]
num-traits = ["miniextendr-api/num-traits"]
bytes = ["miniextendr-api/bytes"]
num-complex = ["miniextendr-api/num-complex"]
url = ["miniextendr-api/url"]
sha2 = ["miniextendr-api/sha2"]
blake3 = ["miniextendr-api/blake3"]
md5 = ["miniextendr-api/md5"]
globset = ["miniextendr-api/globset"]
zstd = ["miniextendr-api/zstd"]
bitflags = ["miniextendr-api/bitflags"]
bitvec = ["miniextendr-api/bitvec"]
aho-corasick = ["miniextendr-api/aho-corasick"]
toml = ["miniextendr-api/toml"]
tabled = ["miniextendr-api/tabled"]
raw_conversions = ["miniextendr-api/raw_conversions"]
vctrs = ["miniextendr-api/vctrs"]
tinyvec = ["miniextendr-api/tinyvec"]
borsh = ["miniextendr-api/borsh"]
arrow = ["miniextendr-api/arrow"]
datafusion = ["miniextendr-api/datafusion"]
log = ["miniextendr-api/log", "dep:log"]
indicatif = ["miniextendr-api/indicatif"]
# Diagnostic / development features (shallow pass-through)
macro-coverage = ["miniextendr-api/macro-coverage"]
growth-debug = ["miniextendr-api/growth-debug"]
# Project-wide defaults for #[miniextendr] options
strict-default = ["miniextendr-api/strict-default"]
coerce-default = ["miniextendr-api/coerce-default"]
r6-default = ["miniextendr-api/r6-default"]
s7-default = ["miniextendr-api/s7-default"]
worker-thread = ["miniextendr-api/worker-thread"]
worker-default = ["miniextendr-api/worker-default"]
## All additive features (excludes mutually exclusive r6-default/s7-default and nonapi/connections).
full = [
    "serde", "serde_json", "num-complex", "uuid", "url", "aho-corasick",
    "bitflags", "bitvec", "arrow", "datafusion", "toml", "time", "ndarray",
    "nalgebra", "indexmap", "tinyvec", "bytes", "raw_conversions", "vctrs",
    "borsh", "ordered-float", "num-bigint", "rust_decimal", "regex",
    "num-traits", "tabled", "rayon", "sha2", "rand", "rand_distr",
    "either", "log", "worker-thread", "macro-coverage",
    "growth-debug", "blake3", "md5", "globset", "zstd",
]

[dependencies]
miniextendr-api = { git = "https://github.com/A2-ai/miniextendr" }
log = { version = "0.4", optional = true }
# miniextendr-free satellite crate (serde-only). Bridged to R via src/rust/satellite_bridge.rs.
satellite = { path = "satellite", optional = true }

[build-dependencies]
miniextendr-lint = { git = "https://github.com/A2-ai/miniextendr" }

# codegen-units = 1 forces the user crate into a single .o so the linker can't drop
# unreferenced linkme #[distributed_slice] archive members (NATIVE registration path).
# Inert on wasm32-*, which registers via the generated wasm_registry.rs (ordinary
# symbol references), not linkme.
[profile.dev]
codegen-units = 1

[profile.release]
codegen-units = 1

# No [patch] block. configure writes .cargo/config.toml per mode:
#   - tarball install (inst/vendor.tar.xz present): [source.crates-io] +
#     [source."git+..."] redirect to vendored-sources, build is offline.
#   - source install + monorepo siblings: [patch."https://github.com/A2-ai/miniextendr"]
#     points the three workspace crates at sibling paths.
#   - source install + no siblings (downstream install_github / git clone of just rpkg):
#     no patch, cargo follows the git URL.
# See docs/CRAN_COMPATIBILITY.md.
